# systembolaget-openhours

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
systembolaget_openhours/: exception.py  fetcher.py  openhour.py  store.py
systembolaget_openhours.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_fetcher.py  test_openhour.py  test_store.py  test_systembolaget_openhours.py  xmls.py
