[tool.poetry]
name = "systembolaget-openhours"
version = "0.1.0"
description = ""
authors = ["Richard Westberg <westberg.richard@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
xmltodict = "^0.12.0"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
flake8 = "^3.8.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
